# SIH-LLVM-2

./: .gitignore  CMakeLists.txt  README.md  export.py  final_obfuscated.ll  obfuscated_output  stats_1.json  temp_0_initial.ll  temp_1_string-obf.ll  temp_2_bogus-insert.ll
.github/workflows/: ci.yml
scripts/: build_and_run.sh
src/driver/: main.cpp  menu_cli.cpp  menu_tui.cpp  obfus_cli.py
src/passes/: BogusInsertPass.cpp  BogusInsertPass.h  CombinedPassPlugin.cpp  ControlFlowFlatteningPass.cpp  ControlFlowFlatteningPass.h  FakeLoopPass.cpp  FakeLoopPass.h  StringObfPass.cpp  StringObfPass.h  TestRegPass.cpp  passes.cpp
src/runtime/: decryptor.c
tests/: cff_test.bc  cff_test.c  hello  hello.bc  hello.c
tools/: inproc_obf.cpp  obfus_cli.cpp  run_cff.cpp
